# solidworks_urdf_exporter2

./: .gitignore  LICENSE  README.md  build_exe.py  install.ps1  install.sh  pyproject.toml
.github/workflows/: auto-release.yml  bump-version.yml  ci.yml  pages.yml  release.yml  reviewer-tldr.yml
assets/: icon.icns
cad2rc/: __init__.py  _autolimits_cli.py  autoinit.py  cli.py  core.py  state.py  ui.py  webserver.py
cad2rc/_vendor/: __init__.py
cad2rc/_vendor/rc_config/: __init__.py  imitation_generator.py  servo_mapping.py
cad2rc/web/: index.html
examples/fingertip/: fingertip.joints.yaml  graph.json
examples/fingertip/meshes/: fingertip_back_1.3dxml  fingertip_front_2.3dxml  screwlock_male_hard_jointbase_v4_1.3dxml
sw2robot/: __init__.py
sw2robot/cad2rc/: __init__.py  _autolimits_cli.py  autoinit.py  cli.py  core.py  state.py  ui.py  webserver.py
sw2robot/cad2rc/_vendor/rc_config/: export.py  gazebo_generator.py  moveit_generator.py  urdf_parser.py
sw2robot/editor/: __init__.py  _autolimits_cli.py  autoinit.py  cli.py  core.py  package_uri.py  state.py  ui.py  update.py  webserver.py
sw2robot/editor/_vendor/rc_config/: __init__.py  export.py  urdf_parser.py
sw2robot/editor/web/: index.html
sw2robot/editor/web/assets/: ATTRIBUTION.md
sw2robot/exporter/: build.py  export.py  extract.py  inertia.py  jointcfg.py  merge.py  mesh.py  model.py  ros_export.py  state.py  swcom.py  urdf_writer.py  viewer.py
sw2robot/sw2urdf/: __init__.py  build.py  export.py  extract.py  inertia.py  jointcfg.py  model.py  swcom.py  urdf_writer.py  viewer.py
sw2urdf/: build.py  export.py  extract.py  geometry.py  jointcfg.py  mesh.py  state.py  swcom.py  viewer.py
tests/: test_autoinit.py  test_cad2rc_e2e.py  test_cad_mode_webserver.py  test_choose_base_hub.py  test_classify_geo.py  test_coacd_collision.py  test_coacd_smoke.py  test_collision_baseline_sync.py  test_expand.py  test_golden_cad_pipeline.py  test_grounded_lock_parent.py  test_joint_physics.py  test_limit_joints.py  test_link_edits.py  test_loop_mimic.py  test_mass_only.py  test_merge_fixed.py  test_mesh_cache_freshness.py  test_mirror_angle_axis.py  test_mirror_axis_fallback.py  test_mirror_copy_parent.py  test_primitive_collision.py  test_rename.py  test_ros_export.py  test_sanitize_names.py  test_snap_unsolved_mates.py  test_sw_inertia.py  test_sw_unavailable.py  test_trimesh_runtime_deps.py  test_urdf_mode_webserver.py
tests/e2e/: package.json  run.mjs  verify_inertial.mjs  verify_replay.mjs
tests/e2e/fixtures/boxbot/urdf/: boxbot.urdf
tests/fixtures/: servo_hone_38mm_1.T.npy  servo_hone_38mm_1.hull.ply  single_yaw_link_1.T.npy  single_yaw_link_1.hull.ply
tests/golden/: fingertip_base.urdf  fingertip_edit.joints.yaml  fingertip_edited.urdf  fingertip_flip.urdf  fingertip_rename_direct.urdf
