[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sw2robot"
version = "0.1.6"
description = "SolidWorks assembly -> URDF exporter with a browser-based editor"
readme = "README.md"
requires-python = ">=3.12"
authors = [{ name = "Iori Yanokura", email = "ab.ioryz@gmail.com" }]
dependencies = [
    "numpy>=2",
    "trimesh>=3.9",
    "lxml",
    "pydantic>=2",
    "pyyaml>=6",
    # only the EXTRACT step (driving SolidWorks COM) needs this, and only on Windows
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# the live self-collision highlight + the auto joint-limit sweep (skrobot FK +
# python-fcl), plus the standalone viser GUI.  The web editor's view / edit /
# extract / build all work WITHOUT these; collision + auto-limits degrade
# gracefully when they are not installed.
ui = [
    "scikit-robot>=0.0.30",
    "python-fcl>=0.7",
    "viser",
]
# extra deps the test suite uses to validate exported ROS packages without a ROS
# install: catkin_pkg parses/validates package.xml the way catkin/colcon do
# (skrobot, used to load the exported URDF + resolve package:// meshes, is in ui).
test = [
    "catkin_pkg",
]

[project.scripts]
sw2urdf = "sw2robot.exporter.export:main"     # extract + build (needs SolidWorks)
sw2robot = "sw2robot.editor.cli:main"        # headless build/edit/export CLI
sw2robot-web = "sw2robot.editor.webserver:main"  # the browser editor server

[tool.hatch.build.targets.wheel]
packages = ["sw2robot"]

[tool.hatch.build.targets.wheel.force-include]
"sw2robot/editor/web/index.html" = "sw2robot/editor/web/index.html"

[tool.pytest.ini_options]
# put the repo root on sys.path so `sw2robot` imports without an install
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = [
    "E501", "E701", "E702", "E731", "E741",  # intentional compact one-liners
    "B023",     # closures run in the same loop iteration
    "B905",     # TODO: add zip(strict=)
    "RUF059",
]
