[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sw2robot"
version = "0.3.2"
description = "SolidWorks assembly -> URDF exporter with a browser-based editor"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "Iori Yanokura", email = "ab.ioryz@gmail.com" }]
dependencies = [
    "numpy>=2",
    # trimesh core + the backends its [easy] extra pulls, listed EXPLICITLY
    # instead of as `trimesh[easy]` so we can drop exactly ONE of them --
    # embreex -- on linux-aarch64, the only platform without an embreex wheel.
    # embreex is just an optional ray/mesh accelerator; trimesh runs without it,
    # so linux-arm64 loses nothing user-visible.  This mirrors trimesh 4.x's
    # [easy] set; keep it in sync when bumping trimesh (see release.yml arm job).
    "trimesh>=3.9",
    "colorlog",
    "manifold3d>=2.3.0",
    "charset-normalizer",
    "jsonschema",
    "networkx",
    "svg.path",
    "pycollada",
    "shapely",
    "xxhash",
    "rtree",
    "httpx",
    "scipy",
    "pillow",
    "vhacdx",
    "mapbox_earcut>=1.0.2",
    # everywhere EXCEPT linux-aarch64 (PEP 508 has no unary `not`, so this is the
    # De Morgan form of "not (linux and aarch64)")
    "embreex; sys_platform != 'linux' or platform_machine != 'aarch64'",
    "lxml",
    "pydantic>=2",
    "pyyaml>=6",
    # only the EXTRACT step (driving SolidWorks COM) needs this, and only on Windows
    "pywin32>=306; sys_platform == 'win32'",
]

[project.optional-dependencies]
# the live self-collision highlight + the auto joint-limit sweep (skrobot FK +
# python-fcl), plus the standalone viser GUI.  scikit-robot also powers the
# `--collision primitive|box|cylinder|sphere` fitting (>=0.3.17 ships the
# per-mesh primitive API, skrobot.utils.primitive_fitting).  The web editor's
# view / edit / extract / build all work WITHOUT these; collision + auto-limits
# degrade gracefully (clear error if a primitive mode is requested) when absent.
ui = [
    "scikit-robot>=0.3.17",
    "python-fcl>=0.7",
    "viser",
]
# optional CoACD approximate convex decomposition for <collision> meshes in the
# ROS export (the `--collision coacd` CLI flag / the web "CoACD collision" box).
# A heavy compiled wheel, so it is its own opt-in extra; the export degrades to
# the plain visual-mesh collision (and a clear error if 'coacd' is requested
# without it) when this is not installed.
coacd = [
    "coacd",
]
# extra deps the test suite uses to validate exported ROS packages without a ROS
# install: catkin_pkg parses/validates package.xml the way catkin/colcon do
# (skrobot, used to load the exported URDF + resolve package:// meshes, is in ui).
test = [
    "catkin_pkg",
    "pytest",
    "packaging",
]

[project.scripts]
sw2urdf = "sw2robot.exporter.export:main"     # extract + build (needs SolidWorks)
sw2robot = "sw2robot.editor.cli:main"        # headless build/edit/export CLI
sw2robot-web = "sw2robot.editor.webserver:main"  # the browser editor server

[tool.hatch.build.targets.wheel]
packages = ["sw2robot"]

[tool.hatch.build.targets.wheel.force-include]
"sw2robot/editor/web/index.html" = "sw2robot/editor/web/index.html"

[tool.pytest.ini_options]
# put the repo root on sys.path so `sw2robot` imports without an install
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "C4", "PIE", "RUF"]
ignore = [
    "E501", "E701", "E702", "E731", "E741",  # intentional compact one-liners
    "B023",     # closures run in the same loop iteration
    "B905",     # TODO: add zip(strict=)
    "RUF059",
]
